expand pivot_table_build.tpl.html in scenario_edit.tpl.html to avoid child scope and fix expand/collapse tab feature

--- a/ThreeSixtyOneView/app/styles/scss/pivot_table_builder.scss
+++ b/ThreeSixtyOneView/app/styles/scss/pivot_table_builder.scss
@@ -5,6 +5,89 @@
 	font-size: 14px;
 	color: $black;
 
+	.pbTitle {
+		border: 1px solid transparent;
+		font-size: 17px;
+		height: 30px;
+		padding: 3px 5px;
+		transition: width 0.3s linear;
+		transition: color 0.3s linear;
+		width: 240px;
+
+		&:hover {
+			color: $blue;
+			border: 1px solid $blue;
+
+			.pbRenameArea {
+				.fa-eye {
+					color: $blue;
+				}
+			}
+
+			&.pbTitleSel {
+				border: 1px solid $mediumgray;
+				border-bottom: 0;
+				border-right: 0;
+				border-top: 0;
+			}
+		}
+
+		&.pbTitleSel {
+			background-color: $lightestgray;
+			border-bottom: 0;
+			border-right: 0;
+			border-top: 0;
+			width: 240px;
+			transition: width 0.3s linear;
+
+			.pbRenameArea {
+				.pbTitleText:hover {
+					border: 1px solid $blue;
+				}
+			}
+		}
+
+		.pbRenameArea {
+			width: 235px;
+
+			.fa-eye {
+				vertical-align: top;
+				margin-top: 5px;
+			}
+
+			.pbTitleText {
+				display: inline-block;
+				border: 1px solid rgba(255,255,255,0);
+				width: 200px;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+
+			.pbSaveAsBox {
+				display: inline-block;
+				width: 210px;
+				border: 1px solid $blue;
+				background-color: white;
+
+				input {
+					width: 155px;
+					height: 24px;
+					border: 0;
+					outline: 0;
+				}
+
+				.fa-check {
+					color: $blue;
+				}
+			}
+		}
+	}
+
+	a {
+		padding: 0;
+	}
+
 	.pbToolbar {
 		height: 30px;
 		border-bottom: 1px solid $mediumgray;
@@ -23,6 +106,7 @@
 		max-height: 0;
 		transition: all 0.3s ease-out;
 		overflow: hidden;
+		padding: 0 16px;
 
 		&.pbOpened {
 			max-height: 300px;
@@ -32,7 +116,7 @@
 
 		.pbControlBar {
 			font-size: 16px;
-			padding: 10px 15px;
+			padding: 16px 0;
 
 			.pbFunctionFlip {
 				color: $darkgray;
@@ -274,7 +358,6 @@
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-
 
 	.modal-dialog {
 		width: 1126px;
@@ -674,92 +757,5 @@
 		border: 0;
 		-webkit-box-shadow: none;
 		box-shadow: none;
-	}
-
-
-}
-
-#pivotBuilderTab {
-	.pbTitle {
-		border: 1px solid transparent;
-		font-size: 17px;
-		height: 30px;
-		padding: 3px 5px;
-		transition: width 0.3s linear;
-		transition: color 0.3s linear;
-		width: 240px;
-
-		&:hover {
-			color: $blue;
-			border: 1px solid $blue;
-
-			.pbRenameArea {
-				.fa-eye {
-					color: $blue;
-				}
-			}
-
-			&.pbTitleSel {
-				border: 1px solid $mediumgray;
-				border-bottom: 0;
-				border-right: 0;
-				border-top: 0;
-			}
-		}
-
-		&.pbTitleSel {
-			background-color: $lightestgray;
-			border-bottom: 0;
-			border-right: 0;
-			border-top: 0;
-			width: 240px;
-			transition: width 0.3s linear;
-
-			.pbRenameArea {
-				.pbTitleText:hover {
-					border: 1px solid $blue;
-				}
-			}
-		}
-
-		.pbRenameArea {
-			width: 235px;
-
-			.fa-eye {
-				vertical-align: top;
-				margin-top: 5px;
-			}
-
-			.pbTitleText {
-				display: inline-block;
-				border: 1px solid rgba(255,255,255,0);
-				width: 200px;
-				white-space: nowrap;
-				overflow: hidden;
-				text-overflow: ellipsis;
-			}
-
-			.pbSaveAsBox {
-				display: inline-block;
-				width: 210px;
-				border: 1px solid $blue;
-				background-color: white;
-
-				input {
-					width: 155px;
-					height: 24px;
-					border: 0;
-					outline: 0;
-				}
-
-				.fa-check {
-					color: $blue;
-				}
-			}
-		}
-	}
-
-	a {
-		padding: 0;
 	}
 }
